--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -148,3 +148,45 @@ footer ul.quicklinks {
     background-image: url(/img/bg.png);
     background-repeat: repeat;
 }
+
+.carta {
+	position: relative;
+	height: 100%;
+	width: 100%;
+	transition: all 1s;
+	transform-style: preserve-3d;
+	box-shadow: 0px 0px 5px black;
+}
+
+.carta:hover{
+  transform: rotateY(180deg);
+}
+
+.lado{
+	position: relative;
+	height: 100%;
+	width: 100%;
+   	background: #F0F0F0;
+  	backface-visibility: hidden;
+}
+
+.frente{ background-color: crimson; }
+.frente h3 {
+	position: absolute;
+   	font-size: 38px;
+   	margin-left: 20%;
+   	color: #fff;
+}
+
+img {  width: 100%; }
+.atras{
+	width: 100%;
+	height: 100%;
+  	transform: rotateY(180deg);
+}
+
+.atras h3 {
+	position: absolute;
+	display: block;
+  	text-align: center;
+}
