--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -29,13 +29,18 @@ h1.empresa_cambio{
 
 .boton_ingresa{
 	margin-top: 4rem;
-	background: #3b5998;
+	background: #1c7cc4;
 	font-size: 2.3rem;
 	font-weight: bold;
 	padding: 2rem 6rem;
 	display: inline-block;
 	color: #fff;
 }
+
+.boton_ingresa:hover{
+	background: #3b5998;
+}
+
 
 
 #unete_point{
@@ -45,19 +50,20 @@ h1.empresa_cambio{
 
 }
 
-.cuadro_ingresar{
+a.cuadro_ingresar{
+	background: #000;
+	color: #fff;
 	border: 4px solid #fff;
 	margin-right: 7px;
 	padding: 1rem 4rem !important;
 	text-transform: uppercase;
 	text-align: center;
-	background: #3b5998;
+	cursor: pointer;	
 }
 
 
-.cuadro_ingresar a:hover{
-	color: #fff;
-	background:#000; 
+a.cuadro_ingresar:hover{
+	background:#1c7cc4; 
 }
 
 /*.logo_cuadro, .empresa_cuadro{
@@ -164,7 +170,7 @@ footer ul.quicklinks {
 .carta {
 	height: 100%;
 	width: 100%;
-	margin-top: 5%;
+	margin-top: 2%;
 	transition: all 1s;
 	transform-style: preserve-3d;
 	box-shadow: 0px 0px 5px black;
@@ -183,7 +189,7 @@ footer ul.quicklinks {
 
 .frente h3 {
 	position: absolute;
-	margin-top: 50%;
+	margin-top: 10%;
    	font-size: 3em;
    	color: #fff;
 }
@@ -231,12 +237,17 @@ h3.carta-letra{
 }
 
 div button.enviar-stylos{
-	width: 100%;
-}
-#contact{
-	background: #ebebeb
+	width: 70%;
+	font-size: 2em;
+	color: #fff;
+	background: #1c7cc4;
 }
 
 #pie-stylos{
 	background: #000;
+}
+
+.img-stylos{
+	width: 30%;
+	height: 30%;
 }
