--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -50,7 +50,7 @@ h1.empresa_cambio{
 
 }
 
-a.cuadro_ingresar{
+#cuadro_ingresar{
 	background: #000;
 	color: #fff;
 	border: 4px solid #fff;
@@ -62,7 +62,7 @@ a.cuadro_ingresar{
 }
 
 
-a.cuadro_ingresar:hover{
+#cuadro_ingresar:hover{
 	background:#1c7cc4; 
 }
 
