--- a/assets/css/estilos1.css
+++ b/assets/css/estilos1.css
@@ -5,6 +5,12 @@
   background-attachment: fixed;
   background-position: 0 0;
 }
+.background-maspop{
+	background:#ebebeb;
+	width: 100%;
+  	height: 100%;
+  	position: relative;
+}
 .background-hotel{
 	background: #FCA44B url("../images/hoteles.jpg") no-repeat center center;
 	background-size: cover;
@@ -13,7 +19,13 @@
 }
 .rest-logo{
 	font-family: "Nova Oval";
+	font-size: 6em;
 }
+
+@media (max-width: 600px) {
+   .rest-logo { font-size: 4em; }
+}
+
 .font-rest{
 	font-size: 20px;
 	margin-right: 60px;
@@ -34,4 +46,15 @@
 }
 .img-logo{
 	padding: 8px
+}
+.cuadro-1{
+	border: 1px solid #cdd0d2;
+	padding: 10px;
+}
+.font-rest{
+	font-family: "Josefin Sans";
+	color: #000;
+}
+.tam-1{
+	font-size: 35px;
 }
