--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -162,9 +162,9 @@ footer ul.quicklinks {
 }
 
 .carta {
-	position: relative;
 	height: 100%;
 	width: 100%;
+	margin-top: 5%;
 	transition: all 1s;
 	transform-style: preserve-3d;
 	box-shadow: 0px 0px 5px black;
@@ -172,34 +172,28 @@ footer ul.quicklinks {
 
 .carta:hover{
   transform: rotateY(180deg);
+  background: #fff;
 }
 
 .lado{
-	position: relative;
 	height: 100%;
 	width: 100%;
-   	background: #F0F0F0;
   	backface-visibility: hidden;
 }
 
-.frente{ background-color: crimson; }
 .frente h3 {
 	position: absolute;
-   	font-size: 38px;
-   	margin-left: 20%;
+	margin-top: 50%;
+   	font-size: 3em;
    	color: #fff;
 }
 
-img {  width: 100%; }
 .atras{
-	width: 100%;
-	height: 100%;
   	transform: rotateY(180deg);
+  	background: #fff;
 }
 
 .atras h3 {
-	position: absolute;
-	display: block;
   	text-align: center;
 }
 
@@ -224,3 +218,11 @@ img {  width: 100%; }
     50% { opacity:0; }
     100% { opacity:1; }
 }
+
+h3.carta-letra{
+	font-size: 2.5em;
+	font-family: "Fredoka One";
+	color: #000;
+	text-align: center;
+}
+
